Changes from jTDS 0.9-rc2
=========================

09/10/2004 - Alin Sinpalean
 o Corrected bug [1023984] Protocol error processing table meta data. Turns out
   the TABNAME packet is only different for TDS versions 0x71000001 and up
   (i.e. SQL Server versions 2000 SP1 and newer). Added an internalTdsVersion
   field to SharedSocket, that should probably replace tdsVersion altogether.

09/07/2004 - Brian Heineman
 o Corrected bug [1022968] Long SQL expression error; (thanks to Mike Hutchinson
   for the patch).
 o Corrected bug [1023984] Protocol error processing table meta data; (thanks to
   Mike Hutchinson for the bug report and patch).

09/05/2004 - Alin Sinpalean
 o Fixed some minor issues with LOBs and InputStreams/Readers that don't fill
   the read buffer.
 o Fixed BigDecimal handling in Support.embedData() (used when prepareSQL=0).
   BigDecimal values had their precision changed to 10 for some reason.
 o Corrected a bug which was causing strings to always be sent as non-unicode
   (i.e. not preceded by N') by prepared statements with prepareSQL=0,
   regardless of TDS version and settings.
 o Corrected bug [1022445] Cursor downgrade warning not raised; thanks Mike for
   the find and fix.
 o Corrected bug [1022448] NPE Cursor result set errors with prepareSQL != 1;
   thanks Mike for the find and fix.
 o Added a misc component to the driver version, to include release candidate
   information or any other version information besides major and minor version
   (e.g. the "-rc2" in 0.9-rc2).

09/02/2004 - Alin Sinpalean
 o Corrected bug [1020733] Sysbase test failures; (thanks to Mike Hutchinson
   for the bug report and patch).
 o Replaced global temporary tables and procedures ("##"-prefixed) with local
   temporary tables and procedures ("#"-prefixed) in all tests, after a failure
   in the test suite caused by a CREATE TABLE statement.

09/01/2004 - Alin Sinpalean
 o Fixed bug #1020324 - "Driver.parseURL method: missing host check". Thanks